--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "satoshi suzuki",
   "license": "MIT",
   "dependencies": {
-    "python-shell": "^1.0.7"
+    "@magenta/music": "^1.8.0",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "electron": "^5.0.0",
